--- a/date/GregorianCalendar.tex
+++ b/date/GregorianCalendar.tex
@@ -11,11 +11,12 @@
 %%See
 %% http://mirrors.ibiblio.org/CTAN/macros/generic/listofitems/listofitems-en.pdf
 %% for "\setsepchar" and "\readlist"
-%%Set parsing separator for "\readlist" to space(" ") character.
-\setsepchar{ }%%For/of package "listofitems"
+%%Set parsing separator for "\readlist" to comma(",") character. This is less
+%% error-prone than space character when using line breaks.
+\setsepchar{,}%%For/of package "listofitems"
 
 %%Number of days in each month of Gregorian calendar.
 \readlist\TUBlnThSiTenNiFiGregorianMonthDaysCount{
 %%@see http://en.wikipedia.org/wiki/Month#Roman_calendar
 %%@see http://en.wikipedia.org/wiki/Gregorian_calendar#Description
-  31 28 31 30 31 30 31 31 30 31 30 31}
+  31,28,31,30,31,30,31,31,30,31,30,31}
