legal;S.M.A.R.T.;,better doc,etc.
-quality assurance:
 -better (documented) include guard
 -more precise identifier names
  (encloses into namespace with authors identification etc.)
 -fixes compiler warnings
-S.M.A.R.T.: -gets current temperature for (S)ATA
 -current temperature for NVMe
-LaTex:
 -include PDF page(s)
 -calculate heating degree day sum
-better doc:
  -as source code comments

--- a/legal/renting/calcDegreeDaySum.tex
+++ b/legal/renting/calcDegreeDaySum.tex
@@ -5,7 +5,7 @@
 
 \input{%%Needs "currfile" package=>"\usepackage{currfile}" before
    \currfiledir../../date/cmp2Dates.tex}
-%%TUBlnThSiTenNiFiGregorianMonthDaysCount
+%%\TUBlnThSiTenNiFiGregorianMonthDaysCount
 \input{\currfiledir../../date/GregorianCalendar.tex}
 \input{\currfiledir../../date/isLeapYear.tex}
 \input{\currfiledir../../date/subtract2Dates.tex}
@@ -49,6 +49,8 @@
 \newcommand{\TUBlnThSiTenNiFiCtr}[2]{\@namedef{\TUBlnThSiTenNiFiPrfx#1}{#2} }
 
 \newcounter{TUBlnThSiTenNiFiCalcDegDaysSumNumDays}
+
+\FPset{TUBlnThSiTenNiFiGerHeatngDegDayLastMonthsPromille}{0}
 
 %%Use counter because adding a value of newcommand with itself did not function.
 \newcounter{TUBlnThSiTenNiFiCalcHeatngDegDayNumFullYears}
@@ -643,8 +645,8 @@
       \FPset{TUBlnThSiTenNiFiHeatngDegFirstFullMonthsPromille}
         {\TUBlnThSiTenNiFiGerHeatngDegDayFullMonthsPromille}
 
-    \setcounter{TUBlnThSiTenNiFiCalcDegreeDaySumCurrYear}
-      {\the\numexpr\theTUBlnThSiTenNiFiCalcDegreeDaySumCurrYear+1\relax}
+      \setcounter{TUBlnThSiTenNiFiCalcDegreeDaySumCurrYear}
+        {\the\numexpr\theTUBlnThSiTenNiFiCalcDegreeDaySumCurrYear+1\relax}
     }
 
 %    \FPset{TUBlnThSiTenNiFiHeatngDegFirstFullMonthsPromille}
@@ -753,8 +755,8 @@
 %        %\TUBlnThSiTenNiFiCalcDegreeDaySumPromille
 %        }
     \TUBlnThSiTenNiFiLog{End year(\TUBlnThSiTenNiFiCalcDegreeDaySumEndYear) >
-start year(\TUBlnThSiTenNiFiCalcDegreeDaySumStrtYear) and end month(
-\TUBlnThSiTenNiFiCalcDegreeDaySumEndMon) after January.}
+      start year(\TUBlnThSiTenNiFiCalcDegreeDaySumStrtYear) and end month(
+      \TUBlnThSiTenNiFiCalcDegreeDaySumEndMon) after January.}
 
     \TUBlnThSiTenNiFiSetVarVal{\TUBlnThSiTenNiFiGerHeatingDegDayCurrMonthDayCnt}
       {\TUBlnThSiTenNiFiGregorianMonthDaysCount[
