--- a/legal/renting/tests/calcDegreeDaySumTest.tex
+++ b/legal/renting/tests/calcDegreeDaySumTest.tex
@@ -269,21 +269,24 @@
 \newcommand\testTwntyFourNovTwoThsdTwntyThrTillFrstMayTwoThsdTwntyFour{
  \TUBlnThSiTenNiFiCalcHeatngDegDaySumTest
   {2023}{11}{24}{2024}{5}{1}{
-  %%Expected promille sum and expected days count:
-  %%  28       7(heating degree promille per day in November)*7 days=120/30*7
-  %%+160     +31(heating degree promille per month in December)
-  %%=188     =38(first days and first months of time span)
-%
-  %% 170      31(heating degree promille per month in January)
-  %%+150     +29(heating degree promille per month for 29 days in February)
-  %%+130     +31(heating degree promille per month in March)
-  %%+ 80     +30(heating degree promille per month in April)
-  %%+  1,29   +1(heating degree promille for 1 day in May)
-  %%=531,29 =122(last days and last months of time span)
-%
-  %% 188      38(first days and first months)
-  %%+531,29 +122(last days and last months)
-  %%=719.29 =160=first days and first months plus last days and last months
+%%Expected|expected
+%%promille|days
+%% sum    |count
+%%--------+--------+
+%%  28    |   7    |(heating degree promille per day in November)*7 days=120/30*7
+%%+160    | +31|(heating degree promille per month in December)
+%%=188    | =38(first days and first months of time span)
+%         |
+%% 170    |  31(heating degree promille per month in January)
+%%+150    | +29(heating degree promille per month for 29 days in February)
+%%+130    | +31(heating degree promille per month in March)
+%%+ 80    | +30(heating degree promille per month in April)
+%%+  1,29 |  +1(heating degree promille for 1 day in May)
+%%=531,29 |=122(last days and last months of time span)
+%         |
+%% 188    |  38(first days and first months)
+%%+531,29 |+122(last days and last months)
+%%=719.29 |=160=first days and first months plus last days and last months
   719.29}{160}
 }
 \newcommand\testXXIVNovMMXXIIItillIMayMMXXIV{
